[package]
name = "rsvelte_lint"
version = "0.9.1"
edition = "2024"
rust-version = "1.90"
description = "Fast native Svelte linter built on the rsvelte compiler (validator wrap + native rule engine)"
license = "MIT"
publish = false

[lib]
# rlib only. The wasm playground module and the Node `.node` addon are the two
# cdylib consumers; both now live in the `rsvelte_lint_bindings` crate. Emitting
# a cdylib here too would write unhashed `deps/librsvelte_lint.{so,rlib}`,
# letting cargo's two profile variants (`panic = "abort"` for the bin, forced
# unwind for test/bench) clobber each other — cargo issue rust-lang/cargo#6313.
crate-type = ["rlib"]

[[bin]]
name = "rsvelte-lint"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
# The CLI: native compiler backend + ESLint-config import + the bin's runtime
# deps (clap/walkdir/rayon).
cli = ["native", "eslint-import", "dep:clap", "dep:walkdir", "dep:rayon"]
# Native backend — pulls in rsvelte_core's `native` feature (svelte_check etc.).
native = ["rsvelte_core/native"]
# `--config-from-eslint` importer (OXC). Off in the wasm build.
eslint-import = [
    "dep:oxc_allocator",
    "dep:oxc_parser",
    "dep:oxc_ast",
    "dep:oxc_ast_visit",
    "dep:oxc_span",
]

[dependencies]
rsvelte_core = { path = "../rsvelte_core", default-features = false }
anyhow = "1.0"
compact_str = { version = "0.10", features = ["serde"] }
# Minimal regex feature set (see rsvelte_core's regex dep) — only `(?i)`/`\w \s`
# are used here, so the large Unicode tables are dropped.
regex = { version = "1.11", default-features = false, features = ["std", "perf", "unicode-perl", "unicode-case"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI-only runtime deps (off in the wasm build).
clap = { version = "4.5", features = ["derive"], optional = true }
walkdir = { version = "2.5", optional = true }
rayon = { version = "1.10", optional = true }

# OXC — same git rev as rsvelte_core (unified by the workspace `[patch]`),
# used only to statically parse `eslint.config.js` for the config importer.
oxc_allocator = { version = "0.141", optional = true }
oxc_parser = { version = "0.141", optional = true }
oxc_ast = { version = "0.141", optional = true }
oxc_ast_visit = { version = "0.141", optional = true }
oxc_span = { version = "0.141", optional = true }

[dev-dependencies]
serde_json = "1.0"
# Parse eslint-plugin-svelte `*-errors.yaml` fixtures in the compat oracle.
serde_yaml = "0.9"

[lints]
workspace = true
