[package]
name = "rsvelte_preprocess"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Native Rust ports of the awesome-svelte preprocessors (switch-case, sass, less, …) as rsvelte PreprocessorGroups"
license = "MIT"
publish = false

[lib]
crate-type = ["rlib"]

[features]
default = ["sass", "less", "svelte-preprocess"]
# Rust-native Sass/SCSS via the `grass` compiler (svelte-preprocess-sass).
sass = ["dep:grass"]
# JS-fallback Less via the user's installed `less` over a Node bridge
# (svelte-preprocess-less).
less = ["dep:serde_json"]
# The svelte-preprocess auto-preprocessor (native subset: replace, globalStyle,
# scss, typescript). Reuses the `sass` backend for scss.
svelte-preprocess = ["sass", "dep:regex"]

[dependencies]
rsvelte_core = { path = "../rsvelte_core", default-features = false }
grass = { version = "0.13", optional = true }
serde_json = { version = "1", optional = true }
regex = { version = "1.11", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
