[package]
name = "tailwind_class_order"
version = "0.0.0"
edition = "2024"
rust-version = "1.90"
description = "Pure-Rust Tailwind CSS class sorter for the default (zero-config) design system — a port of the ordering used by prettier-plugin-tailwindcss / Tailwind v4 getClassOrder"
license = "MIT"
repository = "https://github.com/baseballyama/rsvelte"
homepage = "https://github.com/baseballyama/rsvelte"
keywords = ["tailwindcss", "sort", "prettier", "formatter", "oxc"]

[lib]
crate-type = ["rlib"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
